k8s/aiapp/debug-netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: intellilogs
  labels:
    app: netshoot
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["/bin/bash"]
      args: ["-c", "sleep infinity"]
      stdin: true
      tty: true
  restartPolicy: Never
