k8s/aiapp/03-backend-aiapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-aiapp
  namespace: intellilogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-aiapp
  template:
    metadata:
      labels:
        app: backend-aiapp
    spec:
      imagePullSecrets:
        - name: myquaycred
      containers:
        - name: backend-aiapp
          image: quay.io/rh-ee-anahid/backend-aiapp:v1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: model-volume
              mountPath: /mnt/models/logclassifier/1
      volumes:
        - name: model-volume
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: backend-aiapp
  namespace: intellilogs
spec:
  selector:
    app: backend-aiapp
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
