k8s/aiapp/04-backend-aiapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-aiapp
  namespace: intellilogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-aiapp
  template:
    metadata:
      labels:
        app: backend-aiapp
    spec:
      # RUN AS PRIVILLEGED USER; BECAUSE /tmp/logs was created in the docker in root mode.
      # the image needs to run in privilleged mode in order to save CSV file in that dir. 
      # TODO: Need to create the docker image in a different way so that it is run as user.
      securityContext:
        runAsUser: 0
        runAsNonRoot: false
      serviceAccountName: scc-admin
      containers:
        - name: backend-aiapp
          image: quay.io/rh-ee-anahid/backend-aiapp:v7
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: model-volume
              mountPath: /mnt/models/logclassifier/1
            - name: logs-volume
              mountPath: /tmp/logs
      volumes:
        - name: model-volume
          emptyDir: {}
        - name: logs-volume
          persistentVolumeClaim:
            claimName: backend-aiapp-logs-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-aiapp
  namespace: intellilogs
spec:
  selector:
    app: backend-aiapp
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
