k8s/aiapp/07-proxy-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-app
  namespace: intellilogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-app
  template:
    metadata:
      labels:
        app: proxy-app
    spec:
      imagePullSecrets:
        - name: myquaycred
      containers:
      - name: proxy-app
        image: quay.io/rh-ee-anahid/proxy-app:v2
        ports:
        - containerPort: 8080
        - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-app
  namespace: intellilogs
spec:
  selector:
    app: proxy-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: httpproxy
  - protocol: TCP
    port: 8765
    targetPort: 8765
    name: wsproxy

# oc expose service proxy-app -n intellilogs
